--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         <div id="tab4" class="tab-content">
             <h2>📚 경영학 안에도 세부 전공이 있나요?</h2>
             
-            <h3>주요 분야</h3>
+            <h3>경영학 세부전공 분야</h3>
             
             <div class="columns columns-3">
                 <div class="info-box">
