--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
         script.src = 'https://agent.d-id.com/v2/index.js';
         script.setAttribute('data-mode', 'fabio');
         script.setAttribute('data-client-key', 'Z29vZ2xlLW9hdXRoMnwxMTI3NjQ3MzA0NTM3NjA0MTgyMTI6d01EN0x6bFFFMmlZSk9nUHNacXll');
-        script.setAttribute('data-agent-id', 'v2_agt_80jV_9EA');
+        script.setAttribute('data-agent-id', 'v2_agt_ijRjZY-m');
         script.setAttribute('data-name', 'did-agent');
         script.setAttribute('data-monitor', 'true');
         script.setAttribute('data-orientation', 'horizontal');
@@ -1058,7 +1058,7 @@
         
         document.body.appendChild(script);
     </script>
-
+ 
     <script>
         function openTab(tabId) {
             // 모든 탭 컨텐츠 숨기기
