--- a/cha-ax-rfp.html
+++ b/cha-ax-rfp.html
@@ -389,7 +389,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">CHA University of Medicine and Science</div>
+            <div class="logo">CHA University</div>
             <h1>🤖 AI Transformation(AX) 프로젝트</h1>
             <p class="subtitle">업무별 AI 아바타 챗봇 구축 제안요청서(RFP)</p>
             <span class="badge">📢 제안 공모</span>
