--- a/cha-ax-rfp.html
+++ b/cha-ax-rfp.html
@@ -744,7 +744,7 @@
 
         <footer>
             <p><strong>차의과학대학교 미래융합대학</strong></p>
-            <p>CHA University of Medicine and Science</p>
+            <p>CHA University</p>
             <p style="margin-top: 15px; font-size: 0.9em;">© 2026 차의과학대학교. All rights reserved.</p>
         </footer>
     </div>
