--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             border: none;
             border-radius: 0 0 16px 16px;
             box-shadow: 0 8px 32px rgba(0,0,0,0.3);
-            background: transparent;
+            background: #1a1a1a;
             transition: all 0.3s ease;
             display: block;
         }
